remove dashboard, price field, html field, color icon field, cart, round of better reservation logic, first alpha of now and +1 hr calculation, cleaner rental view with alpha reservation tab, remove transactions, remove rental ownership,

--- a/client/fields.jade
+++ b/client/fields.jade
@@ -290,6 +290,23 @@ template(name='image_link_view')
     img.ui.image(src=field_value)
 
 
+template(name='html_view')
+    if field_value
+        div
+        //- if icon
+        //-     i.icon(class=field_value)
+            //- +i name=icon classes='ui inline image'
+        .ui.inline.small.grey.header
+            if title
+                |#{title}
+            else if label
+                |#{label}
+            //- else if key
+            //-     |#{key}
+            //- else
+            //-     |#{this}            
+        .f6 {{nl2br field_value}}
+
 template(name='textarea_view')
     if field_value
         div
@@ -325,48 +342,6 @@ template(name='textarea_edit')
             textarea.edit_textarea(rows='5') #{field_value}
         if is_dev
             +call_watson mode='text' key=key
-
-
-template(name='html_edit')
-    .ui.form
-        .field
-            label 
-                //- if icon
-                //-     +i name=icon classes='ui middle aligned image'
-                if title
-                    |#{title}
-                else if label
-                    |#{label}
-                else if key
-                    |#{key}
-                else
-                    |#{this}
-    .froala-container
-        +froalaReactive getFEContext
-    //- if is_dev
-    +call_watson mode='html' key=key
-    div
-    //- +tone mode='html'
-    //- if watson
-    //-     +watson_view
-        
-        
-template(name='html_view')
-    if field_value
-        div
-        if icon
-            +i name=icon classes='ui mini inline image'
-            //- i.grey.icon(class=icon)
-        if title
-            |#{title}
-        else if key
-            |#{key}
-        else
-            |#{this}
-    |!{field_value}
-    //- +call_watson mode='html'
-    //- if watson
-    //-     +watson_view
 
 
 template(name='document_edit')
@@ -668,7 +643,7 @@ template(name='date_view')
 
 
 template(name='time_edit')
-    .ui.inline.small.grey.header
+    .ui.inline.grey.header
         if icon
             +ismall name=icon classes='ui inline mini image'
         if title
@@ -687,7 +662,7 @@ template(name='time_view')
     if field_value
         if icon
             +ismall name=icon classes='ui inline mini image'
-        .ui.inline.small.grey.header
+        .ui.inline.grey.header
             if title
                 |#{title}
             else if label
