--- a/components/commerce/product.jade
+++ b/components/commerce/product.jade
@@ -44,7 +44,7 @@ template(name='product_edit')
                             +number_edit key='hourly_rate' label='hourly rate' icon='time-span' direct=true
                             +number_edit key='daily_rate' label='daily rate' icon='timetable' direct=true
                 .eight.wide.column
-                    +html_edit key='description' direct=true
+                    +textarea_edit key='description' direct=true
                     +text_edit key='model' direct=true
                 .four.wide.column
                     .ui.header
