--- a/components/groups.jade
+++ b/components/groups.jade
@@ -42,7 +42,7 @@ template(name='group_edit')
                 .six.wide.column 
                     +text_edit key='title' label='title' icon='title' direct=true
                     +image_edit key='image' label='image' icon='image' direct=true
-                    +html_edit key='description' label='description' icon='content' direct=true
+                    +textarea_edit key='description' label='description' icon='content' direct=true
                     +single_user_edit key='manager' label='manager' direct=true
                     //- +activity
                 .six.wide.column
