--- a/components/service.jade
+++ b/components/service.jade
@@ -115,7 +115,7 @@ template(name='service_edit')
                     +image_edit key='image' label='image' direct=true
                 .eight.wide.column 
                     +text_edit key='title' direct=true
-                    +html_edit key='description' label='content' icon='content' direct=true
+                    +textarea_edit key='description' label='content' icon='content' direct=true
                     +array_edit key='tags' label='tags' icon='tags' direct=true
                     +array_edit key='location_tags' label='location tags' icon='marker' direct=true
                     +single_user_edit key='resident' label='resident' direct=true
